Bug 1506306 - Fix <table> having "column-span:all" style. r=bzbarsky

The main style of <table> is set on the inner TableFrame, not the outer
TableWrapperFrame. Thus, we fail to spot the table as a column-span kid
in nsCSSFrameConstructor::ConstructionBlock().

Differential Revision: https://phabricator.services.mozilla.com/D13957